--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,9 @@
                        Merit revision history
+3, Merit 0.92 (Feb 2, 2017)
+	+) Add 
+	+) Add 
+	+) Add 
+	*) Fixed bug of 
 2, Merit 0.91 (Sep 7, 2016)
 	+) Add datepicker
 	+) Add category select
